@@ -29,8 +29,8 @@ public class PathArgumentsDemoITest extends WithJetty {
     public void pathArgumentsDemo() throws Exception {
         expect().
                 root("rss.channel.item[%d].enclosure.@url").
-                body("", withArgs(0), endsWith("somejpg.jpg")).
-                body("", withArgs(1), endsWith("someotherjpg.jpg")).
+                body(withArgs(0), endsWith("somejpg.jpg")).
+                body(withArgs(1), endsWith("someotherjpg.jpg")).
         when().
                 get("/bigRss");
     }
