@@ -697,8 +697,8 @@ public class RestAssured {
      * <pre>
      * expect().
      *          root("filters.filterConfig[%d].filterConfigGroups.find { it.name == 'Gold' }.includes").
-     *          body("", withArgs(0), hasItem("first")).
-     *          body("", withArgs(1), hasItem("second")).
+     *          body(withArgs(0), hasItem("first")).
+     *          body(withArgs(1), hasItem("second")).
      *          ..
      * </pre>
      * <p/>
